demo/stack-elg/elg-deployment.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: logging-stack-elg
  labels:
    app: logging-stack-elg
spec:
  replicas: 1
  selector:
    matchLabels:
      app: logging-stack-elg
  template:
    metadata:
      labels:
        app: logging-stack-elg
    spec:
      containers:

      # mongo
      - name: mongo
        image: mongo:3

      # elastic
      - name: elasticsearch
        image: docker.elastic.co/elasticsearch/elasticsearch:5.6.12
      - name: graylog
        image: graylog/graylog:2.4.0-1
      - name: logstash
        image: observabilitystack/logstash:6.5.3-1
        volumeMounts:
          - name: logstash-configuration
            mountPath: /usr/share/logstash/pipeline/logstash.conf
            readOnly: true
            subPath: logstash.conf

      volumes:
      - name: logstash-configuration
        configMap:
          defaultMode: 0644
          name: logging-stack-logstash-configuration
