demo/stack-elg/graylog-deployment.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: graylog
  labels:
    app: graylog
spec:
  replicas: 1
  selector:
    matchLabels:
      app: graylog
  template:
    metadata:
      labels:
        app: graylog
    spec:
      containers:

      # mongo
      - name: mongo
        image: mongo:3

      # elastic
      - name: elasticsearch
        image: docker.elastic.co/elasticsearch/elasticsearch-oss:6.7.2
      - name: graylog
        image: graylog/graylog:2.5.2-1
