demo/stack-elg/graylog-service.yml
---
apiVersion: v1
kind: Service
metadata:
  name: graylog
  labels:
    app: graylog
spec:
  ports:
  - name: web
    port: 9000
  - name: gelf
    port: 12201
  selector:
    app: graylog
