demo/stack-elg/logstash-service.yml
---
apiVersion: v1
kind: Service
metadata:
  name: logstash
  labels:
    app: logstash
spec:
  ports:
  - name: logstash
    port: 5044
  selector:
    app: logstash
