demo/stack-elg/service-elasticsearch.yml
---
apiVersion: v1
kind: Service
metadata:
  name: logging-stack-service-elasticsearch
  labels:
    app: logging-stack-elg
spec:
  type: NodePort
  ports:
  - name: elasticsearch
    port: 9200
    protocol: TCP
    targetPort: 9200
    nodePort: 30200
  selector:
    app: logging-stack-elg
