demo/stack-elg/service-logstash.yml
---
apiVersion: v1
kind: Service
metadata:
  name: logging-stack-service-logstash
  labels:
    app: logging-stack-elg
spec:
  type: NodePort
  ports:
  - name: logstash
    port: 5044
    protocol: TCP
    targetPort: 5044
    nodePort: 30544
  selector:
    app: logging-stack-elg
