demo/stack-elg/graylog-ingress.yml
---
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  labels:
    app: graylog
  name: graylog-ui
spec:
  rules:
  - host: local.o12stack.org
    http:
      paths:
      - backend:
          serviceName: graylog
          servicePort: 9000
